objects/Warehouse_Upcharge__c.object
<CustomObject>
    <fields>
        <fullName>BrandDesc__c</fullName>
        <label>BrandDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandID__c</fullName>
        <externalId>true</externalId>
        <label>BrandID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemBeverageCodeDesc__c</fullName>
        <label>ItemBeverageCodeDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemBeverageCodeID__c</fullName>
        <label>ItemBeverageCodeID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemPackID__c</fullName>
        <label>ItemPackID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemSizeID__c</fullName>
        <label>ItemSizeID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Long Item Number</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_WhsUpcharge__c</fullName>
        <formula>WhsUpcharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old_WhsUpcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Short_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Short Item Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhsUpcharge__c</fullName>
        <label>Whse Upcharge $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WhseOldUpchg__c</fullName>
        <formula>WhsUpcharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Whse Old Upcharge $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Warehouse Upcharge</label>
    <nameField>
        <displayFormat>WU-{0000}</displayFormat>
        <label>Whse Upcharge</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warehouse Upcharges</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>